[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <ilya.kazyamov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
